# bop

./: .gitignore  .secretsignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  HEATMAP_VERIFICATION.md  LICENSE  Makefile  README.md  SPEC.md  bop-design-rationale.md  dispatch.nu  plan.md  verify_tooltip.sh
.auto-claude/: dispatch-state.json  project_index.json
.auto-claude/ideation/: documentation_gaps_ideas.json  graph_hints.json  ideation.json  ideation_context.json  performance_optimizations_ideas.json  security_hardening_ideas.json  ui_ux_improvements_ideas.json
.auto-claude/roadmap/: competitor_analysis.json  graph_hints.json  (+3 more)
.cards/: CODEBASE.md  agents.md  bop-agents.ics  bop-gantt.html  models.json  policy.toml  providers.json  system_context.md  test-gantt-responsive.html
.jjconflict-base-0/: Makefile
.jjconflict-side-0/: .gitignore  README.md
.jjconflict-side-1/: deny.toml
adapters/: README.md  aider.nu  aider.sh  aider.zsh  claude.nu  claude.sh  claude.zsh  codex.nu  codex.sh  codex.zsh  goose.nu  goose.sh  goose.zsh  mlx.nu  mock.nu  mock.sh  mock.zsh  ollama-local.nu  ollama-local.sh  ollama-local.zsh  ollama.nu  opencode.nu  opencode.sh  qemu-pool.nu  qemu.nu  timeout_wrapper.nu
completions/: _bop  _jc  jc.bash  jc.fish  jc.zsh
crates/bop-cli/: Cargo.toml  test_color_output.sh
crates/bop-cli/.bop/: config.json  config.yaml
crates/bop-cli/src/: acplan.rs  benchmark.rs  cards.rs  colors.rs  diff.rs  dispatcher.rs  doctor.rs  events.rs  export.rs  factory.rs  gantt.rs  icons.rs  index.rs  inspect.rs  list.rs  lock.rs  main.rs  memory.rs  merge_gate.rs  paths.rs  poker.rs  policy.rs  pool.rs  power.rs  project.rs  providers.rs  quicklook.rs  reaper.rs  replay.rs  serve.rs  stats.rs  termcaps.rs  util.rs  watch.rs  webhook.rs  workspace.rs
crates/bop-cli/src/bridge/: cmd.rs  hook_installer.rs  mod.rs  opencode.rs
crates/bop-cli/src/providers/: bopdeck.rs  claude.rs  codex.rs  gemini.rs  history.rs  mod.rs  ollama.rs  opencode.rs
crates/bop-cli/src/render/: basic.rs  dumb.rs  extended.rs  full.rs  mod.rs  truecolor.rs
crates/bop-cli/src/ui/: app.rs  detail_panel.rs  event.rs  factory_tab.rs  input.rs  log_pane.rs  mod.rs  wizard.rs
crates/bop-cli/src/ui/snapshots/: bop__ui__snapshot_tests__detail_overlay.snap  bop__ui__snapshot_tests__footer_action_popup_mode.snap  bop__ui__snapshot_tests__footer_detail_mode.snap  bop__ui__snapshot_tests__footer_filter_mode.snap  bop__ui__snapshot_tests__footer_logtail_mode.snap  bop__ui__snapshot_tests__footer_newcard_mode.snap  bop__ui__snapshot_tests__footer_normal_mode.snap  bop__ui__snapshot_tests__footer_with_fkey_bar.snap  bop__ui__snapshot_tests__full_tui_layout.snap  bop__ui__snapshot_tests__header_with_providers.snap  bop__ui__snapshot_tests__kanban_collapsed_empty_columns.snap  bop__ui__snapshot_tests__kanban_normal_view.snap  bop__ui__snapshot_tests__kanban_with_filter.snap  bop__ui__snapshot_tests__logtail_overlay.snap  bop__ui__snapshot_tests__minimal_status.snap
crates/bop-cli/src/ui/widgets/: action.rs  detail.rs  filter.rs  footer.rs  header.rs  kanban.rs  logtail.rs  mod.rs  newcard.rs
crates/bop-cli/tests/: dispatcher_harness.rs  job_control_harness.rs  merge_gate_harness.rs  serve_smoke.rs
crates/bop-core/: Cargo.toml
crates/bop-core/src/: attestation.rs  cardchars.rs  config.rs  lib.rs  lineage.rs  realtime.rs
crates/jc/: Cargo.toml
crates/jc/src/: cards.rs  dispatcher.rs  doctor.rs  events.rs  factory.rs  gantt.rs  icons.rs  index.rs  inspect.rs  list.rs  lock.rs  logs.rs  main.rs  memory.rs  merge_gate.rs  paths.rs  poker.rs  policy.rs  providers.rs  quicklook.rs  reaper.rs  toast.rs  util.rs  workspace.rs
crates/jc/tests/: config_cmd.rs  create_from_description_harness.rs  dashboard_harness.rs  dispatcher_harness.rs  job_control_harness.rs  memory_harness.rs  merge_gate_harness.rs  providers_harness.rs  rest_api_harness.rs  web_ui_harness.rs  worktree_harness.rs
docs/: cicd-integration.md  codex-mcp-setup.md  format-storage-contract.md  lessons.md  qemu-setup.md  storage-decision.md
launchd/: README.md  com.yourorg.bop.dispatcher.plist  com.yourorg.bop.merge-gate.plist  com.yourorg.jobcard.dispatcher.plist  com.yourorg.jobcard.merge-gate.plist  com.yourorg.jobcard.roadmap-inbox.plist.sample
layouts/: bop.kdl
output/: result.md
scripts/: _lane_metrics_impl.py  agent.sh  bop_bop.nu  bop_bop.zsh  bop_focus.nu  bop_focus.zsh  build-qemu-base.nu  check_licenses.nu  create_teams.py  dashboard.nu  dashboard.zsh  ingest_roadmap_hotfolder.nu  ingest_roadmap_hotfolder.zsh  install_roadmap_hotfolder_launchd.nu  install_roadmap_hotfolder_launchd.zsh  land_safe.nu  land_safe.zsh  lane_metrics.nu  lane_metrics.zsh  launch_teams.nu  launch_teams.sh  launch_teams.zsh  macos_cards_maintenance.nu  macos_cards_maintenance.zsh  monitor_green_slo.nu  monitor_green_slo.zsh  policy_check.nu  policy_check.zsh  promotion_gate.nu  promotion_gate.zsh  record_make_check.nu  record_make_check.zsh  release.nu  render_card_thumbnail.swift  route_canary.nu  route_canary.zsh  run_blue_green.nu  run_blue_green.zsh  set_card_icon.swift  test-real-adapters.nu  (+2 more)
smart-folders/: All Cards.savedSearch  Draft Cards.savedSearch  Failed Cards.savedSearch  Running Cards.savedSearch
vibekanban/: README.md  _bop_provider_impl.py  bop-bridge.nu  bop-provider.nu  bop-provider.zsh  config.json  jobcard-provider.zsh  test_provider.nu  test_provider.zsh
zellij/: README.md  bop.kdl
(+2292 files in other folders)
