[workspace]
resolver = "2"
members = [
  "crates/bop-core",
  "crates/bop-cli",
]
# bop-zellij-plugin is a WASM-only cdylib and must be built separately:
#   cargo build -p bop-zellij-plugin --target wasm32-wasip1 --release
# It cannot be compiled for the host target (cdylib + WASM-only deps).

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
walkdir = "2"

dirs = "5.0"

[profile.release]
opt-level = "s"
