[package]
name = "bop"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
clap_complete.workspace = true
serde_json.workspace = true
walkdir.workspace = true
bop-core = { path = "../bop-core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process"] }
serde.workspace = true
notify = "6"

[dev-dependencies]
tempfile = "3"
chrono.workspace = true
serde_json.workspace = true
bop-core = { path = "../bop-core" }
