[package]
name = "bop-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
blake3 = "1"
chrono.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile = "3"
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
