[package]
name = "jc"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
walkdir.workspace = true
jobcard-core = { path = "../jobcard-core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process", "net"] }
serde.workspace = true
notify = "8.2.0"
crossterm = "0.29"
ratatui = "0.29"

[dev-dependencies]
tempfile = "3"
chrono.workspace = true
serde_json.workspace = true
