[package]
name = "jc"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
clap_complete = "4"
serde_json.workspace = true
walkdir.workspace = true
jobcard-core = { path = "../jobcard-core" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process", "net"] }
serde.workspace = true

[dev-dependencies]
tempfile = "3"
serde_json.workspace = true
